[package]
name = "eth_trigger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
directories = "5.0.1"
log = "0.4.19"
pcap = "1.1.0"
rppal = "0.14.1"
serde = {version =  "1.0.171", features = ["derive"]}
toml = "0.7.6"
